add read and write steps with basic filtering

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">GoogleHealthConnect</string>
+    <string name="back_button">Go back</string>
+    <string name="insert_record">Add</string>
+    <string name="record_add">RecordAddScreen</string>
+    <string name="save_record">Save</string>
+    <string name="attention">Attention!</string>
+    <string name="delete_question">Are you sure?</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
+    <string name="get_permissions">Add permissions</string>
 </resources>
